--- a/Calculator/src/main/webapp/WEB-INF/web.xml
+++ b/Calculator/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,9 @@
         <servlet-name>AgeCalculatorServlet</servlet-name>
         <url-pattern>/age</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>age</welcome-file>
+    </welcome-file-list>
     <session-config>
         <session-timeout>
             30
