--- a/Calculator/src/main/webapp/WEB-INF/web.xml
+++ b/Calculator/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,10 @@
         <servlet-name>AgeCalculatorServlet</servlet-name>
         <servlet-class>ca.sait.calculator.servlets.AgeCalculatorServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ArithmeticCalculatorServlet</servlet-name>
+        <servlet-class>ca.sait.calculator.servlets.ArithmeticCalculatorServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AgeCalculatorServlet</servlet-name>
         <url-pattern>/age</url-pattern>
@@ -11,6 +15,10 @@
     <welcome-file-list>
         <welcome-file>age</welcome-file>
     </welcome-file-list>
+    <servlet-mapping>
+        <servlet-name>ArithmeticCalculatorServlet</servlet-name>
+        <url-pattern>/arithmetic</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
